--- a/webapp/noobcash/templates/noobcash/base.html
+++ b/webapp/noobcash/templates/noobcash/base.html
@@ -18,7 +18,7 @@
     </head>
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-        <a class="navbar-brand mr-4" href="/home">Noobcash</a>              
+        <a class="navbar-brand mr-4" href="{% url 'noobcash-home' %}">Noobcash</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                 aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
