Change base template to extend

--- a/webapp/node/templates/node/new_transaction.html
+++ b/webapp/node/templates/node/new_transaction.html
@@ -1,4 +1,4 @@
-{% extends "noobcash/base.html" %} {% load crispy_forms_tags %} {% block content %}
+{% extends "node/node_base.html" %} {% load crispy_forms_tags %} {% block content %}
 <div class="content-section">
     <form method="POST">
         {% csrf_token %}
